--- a/configs/turris_mox_defconfig
+++ b/configs/turris_mox_defconfig
@@ -23,12 +23,16 @@ CONFIG_SYS_CONSOLE_INFO_QUIET=y
 # CONFIG_DISPLAY_BOARDINFO is not set
 CONFIG_ARCH_EARLY_INIT_R=y
 CONFIG_MISC_INIT_R=y
+CONFIG_BUTTON=y
+CONFIG_BUTTON_GPIO=y
+CONFIG_CMD_BUTTON=y
 CONFIG_CMD_AES=y
 CONFIG_CMD_CLK=y
 # CONFIG_CMD_FLASH is not set
 CONFIG_CMD_GPIO=y
 CONFIG_CMD_HASH=y
 CONFIG_CMD_I2C=y
+CONFIG_CMD_LED=y
 CONFIG_CMD_LZMADEC=y
 CONFIG_CMD_MMC=y
 CONFIG_CMD_PCI=y
@@ -56,6 +60,8 @@ CONFIG_CLK=y
 CONFIG_CLK_MVEBU=y
 # CONFIG_MVEBU_GPIO is not set
 CONFIG_DM_I2C=y
+CONFIG_LED=y
+CONFIG_LED_GPIO=y
 CONFIG_MISC=y
 CONFIG_DM_MMC=y
 CONFIG_MMC_SDHCI=y
