arm: mvebu: turris_mox: enable mtd command in defconfig
Enable mtd command in defconfig for accessing SPI NOR, since sf command
is deprecated.

Signed-off-by: Marek Behún <marek.behun@nic.cz>

--- a/configs/turris_mox_defconfig
+++ b/configs/turris_mox_defconfig
@@ -35,6 +35,7 @@ CONFIG_CMD_I2C=y
 CONFIG_CMD_LED=y
 CONFIG_CMD_LZMADEC=y
 CONFIG_CMD_MMC=y
+CONFIG_CMD_MTD=y
 CONFIG_CMD_PCI=y
 CONFIG_CMD_SPI=y
 CONFIG_CMD_USB=y
@@ -70,6 +71,7 @@ CONFIG_MMC_SDHCI_XENON=y
 CONFIG_MTD=y
 CONFIG_SF_DEFAULT_MODE=0
 CONFIG_SF_DEFAULT_SPEED=20000000
+CONFIG_SPI_FLASH_MTD=y
 CONFIG_SPI_FLASH_MACRONIX=y
 CONFIG_SPI_FLASH_SPANSION=y
 CONFIG_SPI_FLASH_STMICRO=y
